Generation of DOM from USX objects is working well.

--- a/BibleAppNW/package.json
+++ b/BibleAppNW/package.json
@@ -2,11 +2,11 @@
 	"name": "BibleAppNW",
 	"description": "Desktop Version of the Shortsands Bible App",
 	"main": "index.html",
-	"window: {
+	"window": {
 		"toolbar": true,
 		"show": true
 	},
 	"scripts": {
-    "start": "nodewebkit"
+    	"start": "nodewebkit"
   	}
 }
