WebView inside ScrollView working for Bible Text.

--- a/BibleAppTNS/package.json
+++ b/BibleAppTNS/package.json
@@ -1,6 +1,6 @@
 {
 	"nativescript": {
-		"id": "org.nativescript.BibleAppTNS",
+		"id": "com.shortsands.BibleAppTNS",
 		"tns-ios": {
 			"version": "1.2.0"
 		}
