Added platform ios back after removing platforms from git.

--- a/BibleAppTNS/package.json
+++ b/BibleAppTNS/package.json
@@ -1,5 +1,8 @@
 {
 	"nativescript": {
-		"id": "com.shortsands.BibleAppTNS"
+		"id": "com.shortsands.BibleAppTNS",
+		"tns-ios": {
+			"version": "1.2.0"
+		}
 	}
 }
