--- a/BibleAppCLI/platforms/ios/Bible.js/Bible.js-Info.plist
+++ b/BibleAppCLI/platforms/ios/Bible.js/Bible.js-Info.plist
@@ -171,5 +171,12 @@
         <string>{768, 1024}</string>
       </dict>
     </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+    </dict>
+    <key>WKWebViewPluginEmbeddedServerPort</key>
+    <string>12344</string>
   </dict>
 </plist>
