Change iconTest to support a common node webkit test function runUnitTest.

--- a/UnitTests/package.json
+++ b/UnitTests/package.json
@@ -10,3 +10,5 @@
     	"start": "nodewebkit"
   	}
 }
+// index.html calls runUnitTest()
+// So, any test can use this package by implementing that method
