--- a/Plugins/VideoPlayer/src/android/VideoPlayer/app/src/main/AndroidManifest.xml
+++ b/Plugins/VideoPlayer/src/android/VideoPlayer/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VideoPlayer">
+        <activity android:name=".VideoPlayer"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
