Android VideoPlugin is working.

--- a/Plugins/VideoPlayer/plugin.xml
+++ b/Plugins/VideoPlayer/plugin.xml
@@ -15,13 +15,19 @@
 	</js-module>
 
 	<platform name="android">
-		<source-file src="src/android/VideoPlayer/app/src/main/java/com/shortsands/videoplayer/VideoPlugin.java" target-dir="src/com/shortsands/videoplayer" />
-		<source-file src="src/android/VideoPlayer/app/src/main/java/com/shortsands/videoplayer/VideoPlayer.java" target-dir="src/com/shortsands/videoplayer" />
-    	<config-file target="res/xml/config.xml" parent="/*">
+    	<config-file target="config.xml" parent="/*">
 			<feature name="VideoPlayer">
 				<param name="android-package" value="com.shortsands.videoplayer.VideoPlayer"/>
 			</feature>
 		</config-file>
+		<config-file target="AndroidManifest.xml" parent="/manifest">
+			<uses-permission android:name="android.permission.INTERNET" />
+		</config-file>
+		<config-file target="AndroidManifest.xml" parent="/manifest/application">
+			<activity android:configChanges="orientation|screenSize" android:name="com.shortsands.videoplayer.VideoActivity" android:label="VideoActivity"></activity>
+		</config-file>
+		<source-file src="src/android/VideoPlayer/app/src/main/java/com/shortsands/videoplayer/VideoPlayer.java" target-dir="src/com/shortsands/videoplayer" />
+		<source-file src="src/android/VideoPlayer/app/src/main/java/com/shortsands/videoplayer/VideoActivity.java" target-dir="src/com/shortsands/videoplayer" />
 	</platform>
   
 	<platform name="ios">
