--- a/Plugins/VideoPlayer/plugin.xml
+++ b/Plugins/VideoPlayer/plugin.xml
@@ -29,8 +29,10 @@
 		<source-file src="src/android/com/shortsands/videoplayer/VideoPlayer.java" target-dir="src/com/shortsands/videoplayer" />
 		<source-file src="src/android/com/shortsands/videoplayer/VideoActivity.java" target-dir="src/com/shortsands/videoplayer" />
 		<source-file src="src/android/com/shortsands/videoplayer/VideoPersistence.java" target-dir="src/com/shortsands/videoplayer" />
+		<source-file src="src/android/com/shortsands/videoplayer/EventLogger.java" target-dir="src/com/shortsands/videoplayer" />
 		<!-- change library to a more limited one when done. -->
-		<framework src="src/android/plugin.gradle" custom="true" type="gradleReference"/>
+		<!-- <framework src="src/android/plugin.gradle" custom="true" type="gradleReference"/> -->
+		<!-- Need something to copy build-extras.gradle to proper location. -->
 	</platform>
   
 	<platform name="ios">
@@ -38,32 +40,6 @@
 	    	<feature name="VideoPlayer">
 				<param name="ios-package" value="VideoPlayer" />
 			</feature>
-		</config-file>
-		<config-file target="*-Info.plist" parent="CFBundleURLTypes">
-		    <dict>
-				<key>NSAppTransportSecurity</key>
-				<dict>
-					<key>NSExceptionDomains</key>
-					<dict>
-						<key>brightcove.com</key>
-						<dict>
-							<key>NSIncludesSubdomains</key>
-							<true/>
-							<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-							<true/>
-						</dict>
-						<key>akamaihd.net</key>
-						<dict>
-							<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-							<true/>
-							<key>NSIncludesSubdomains</key>
-							<true/>
-						</dict>
-					</dict>
-					<key>NSAllowsArbitraryLoadsInWebContent</key>
-					<false/>
-				</dict>
-		    </dict>
 		</config-file>
 		<source-file src="src/ios/VideoPlayer/VideoPlayer.swift" target-dir="src/videoplayer" />
 		<source-file src="src/ios/VideoPlayer/AVPlayerViewControllerExtension.swift" target-dir="src/videoplayer" />
