--- a/Plugins/AudioPlayer/plugin.xml
+++ b/Plugins/AudioPlayer/plugin.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com-shortsands-videoplayer"
+    id="com-shortsands-audioplayer"
     version="0.0.1">
-	<name>VideoPlayer</name>
-	<description>Plugin to Access Native Video Player</description>
+	<name>AudioPlayer</name>
+	<description>Plugin to Access Native Audio Player</description>
 	<author>Gary Griswold</author>
 	<engines>
     	<engine name="cordova" version=">=6.0.0"/>
 	</engines>
 
-	<js-module name="VideoPlayer" src="www/VideoPlayer.js">
-    	<clobbers target="VideoPlayer" />
+	<js-module name="AudioPlayer" src="www/AudioPlayer.js">
+    	<clobbers target="AudioPlayer" />
 	</js-module>
 
 	<platform name="android">
     	<config-file target="config.xml" parent="/*">
-			<feature name="VideoPlayer">
-				<param name="android-package" value="com.shortsands.videoplayer.VideoPlayer"/>
+			<feature name="AudioPlayer">
+				<param name="android-package" value="com.shortsands.audioplayer.AudioPlayer"/>
 			</feature>
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest">
@@ -26,25 +26,22 @@
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			<activity android:name="com.shortsands.videoplayer.VideoActivity" android:label="VideoActivity" android:screenOrientation="landscape"></activity>
 		</config-file>
-		<source-file src="src/android/com/shortsands/videoplayer/VideoPlayer.java" target-dir="src/com/shortsands/videoplayer" />
-		<source-file src="src/android/com/shortsands/videoplayer/VideoActivity.java" target-dir="src/com/shortsands/videoplayer" />
-		<source-file src="src/android/com/shortsands/videoplayer/VideoPersistence.java" target-dir="src/com/shortsands/videoplayer" />
-		<source-file src="src/android/com/shortsands/videoplayer/EventLogger.java" target-dir="src/com/shortsands/videoplayer" />
-		<!-- change library to a more limited one when done. -->
-		<!-- <framework src="src/android/plugin.gradle" custom="true" type="gradleReference"/> -->
-		<!-- Need something to copy build-extras.gradle to proper location. -->
+		<source-file src="src/android/com/shortsands/audioplayer/VideoPlayer.java" target-dir="src/com/shortsands/audioplayer" />
+		<source-file src="src/android/com/shortsands/audioplayer/VideoActivity.java" target-dir="src/com/shortsands/audioplayer" />
+		<source-file src="src/android/com/shortsands/audioplayer/VideoPersistence.java" target-dir="src/com/shortsands/audioplayer" />
+		<source-file src="src/android/com/shortsands/audioplayer/EventLogger.java" target-dir="src/com/shortsands/audioplayer" />
 	</platform>
   
 	<platform name="ios">
 		<config-file target="config.xml" parent="/*">
-	    	<feature name="VideoPlayer">
-				<param name="ios-package" value="VideoPlayer" />
+	    	<feature name="AudioPlayer">
+				<param name="ios-package" value="AudioPlayer" />
 			</feature>
 		</config-file>
-		<source-file src="src/ios/VideoPlayer/VideoPlayer.swift" target-dir="src/videoplayer" />
-		<source-file src="src/ios/VideoPlayer/AVPlayerViewControllerExtension.swift" target-dir="src/videoplayer" />
-		<source-file src="src/ios/VideoPlayer/VideoViewPlayer.swift" target-dir="src/videoplayer" />
-		<source-file src="src/ios/VideoPlayer/VideoViewState.swift" target-dir="src/videoplayer" />
+		<source-file src="src/ios/AudioPlayer.swift" target-dir="src" />
+		<source-file src="src/ios/AVPlayerViewControllerExtension.swift" target-dir="src" />
+		<source-file src="src/ios/AudioPlayerService.swift" target-dir="src" />
+		<source-file src="src/ios/AudioState.swift" target-dir="src" />
 		<framework src="MediaPlayer.framework" />
 	</platform>
 
