Transfer utility was changed to use a path style.

--- a/Plugins/AWS/plugin.xml
+++ b/Plugins/AWS/plugin.xml
@@ -63,6 +63,8 @@
 		<source-file src="src/ios/Credentials.swift" />
 		<header-file src="src/ios/SS_AWS/SS_AWSS3PreSignedURL.h" />
 		<source-file src="src/ios/SS_AWS/SS_AWSS3PreSignedURL.m" />
+		<header-file src="src/ios/SS_AWS/SS_AWSS3TransferUtility.h" />
+		<source-file src="src/ios/SS_AWS/SS_AWSS3TransferUtility.m" />
 		<!-- These frameworks need to be added to the project as Embedded Binaries
 		<framework src="src/ios/libs/AWSCore.framework" />
 		<framework src="src/ios/libs/AWSS3.framework" /> -->
