--- a/Plugins/AWS/plugin.xml
+++ b/Plugins/AWS/plugin.xml
@@ -17,11 +17,12 @@
 	<platform name="android">
     	<config-file target="config.xml" parent="/*">
 			<feature name="AWS">
-				<param name="android-package" value="com.shortsands.aws.s3.AwsS3"/>
+				<param name="android-package" value="com.shortsands.aws.s3Plugin.AWS"/>
 			</feature>
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest">
 			<uses-permission android:name="android.permission.INTERNET" />
+			<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			 <service android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" android:enabled="true" />
@@ -37,7 +38,7 @@
 		<source-file src="src/android/com/shortsands/aws/s3/DownloadZipFileListener.java" target-dir="src/com/shortsands/aws/s3" />
 		<source-file src="src/android/com/shortsands/aws/s3/UploadDataListener.java" target-dir="src/com/shortsands/aws/s3" />
 		<source-file src="src/android/com/shortsands/aws/s3/UploadFileListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/AwsS3Plugin.java" target-dir="src/com/shortsands/aws/s3Plugin" />
+		<source-file src="src/android/com/shortsands/aws/s3Plugin/AWS.java" target-dir="src/com/shortsands/aws/s3Plugin" />
 		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginDataListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
 		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginFileListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
 		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginTextListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
