--- a/Plugins/VideoPlayer/plugin.xml
+++ b/Plugins/VideoPlayer/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com-shortsands-videoplayer"
-    version="1.0.2">
+    version="1.0.3">
 	<name>VideoPlayer</name>
 	<description>Plugin to Access Native Video Player</description>
 	<author>Gary Griswold</author>
@@ -41,10 +41,11 @@
 				<param name="ios-package" value="VideoPlayer" />
 			</feature>
 		</config-file>
-		<source-file src="src/ios/VideoPlayer/VideoPlayer.swift" target-dir="src/videoplayer" />
-		<source-file src="src/ios/VideoPlayer/AVPlayerViewControllerExtension.swift" target-dir="src/videoplayer" />
+		<source-file src="src/ios/VideoPlayer.swift" />
+		<!-- <source-file src="src/ios/VideoPlayer/AVPlayerViewControllerExtension.swift" target-dir="src/videoplayer" />
 		<source-file src="src/ios/VideoPlayer/VideoViewPlayer.swift" target-dir="src/videoplayer" />
-		<source-file src="src/ios/VideoPlayer/VideoViewState.swift" target-dir="src/videoplayer" />
+		<source-file src="src/ios/VideoPlayer/VideoViewState.swift" target-dir="src/videoplayer" /> -->
+		<framework src="src/ios/build/VideoPlayer.framework" custom="true" embed="true" />
 		<framework src="MediaPlayer.framework" />
 	</platform>
 
