--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@ Validation/output/
 node_modules/
 xcdebugger/
 com-shortsands-videoplayer/
+### Swift Xcode ###
+build/
+DerivedData/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
