Update android Zip build_framework.sh

--- a/Plugins/PKZip/src/android/app/build.gradle
+++ b/Plugins/PKZip/src/android/app/build.gradle
@@ -20,23 +20,24 @@ android {
     def LIBROOT = "/Users/garygriswold/Library/Frameworks/"
     def DEBUG_ROOT = LIBROOT + "Debug-android/"
     def RELSE_ROOT = LIBROOT + "Release-android/"
+    def JAR = "Zip.jar"
 
     task deleteJars(type: Delete) {
-        delete DEBUG_ROOT + "Zip.jar"
-        delete RELSE_ROOT + "Zip.jar"
+        delete DEBUG_ROOT + JAR
+        delete RELSE_ROOT + JAR
     }
     task copyDebug(type: Copy) {
         from("build/intermediates/bundles/debug/")
         into(DEBUG_ROOT)
         include("classes.jar")
-        rename("classes.jar", "Zip.jar")
+        rename("classes.jar", JAR)
 
     }
     task copyRelse(type: Copy) {
         from("build/intermediates/bundles/default/")
         into(RELSE_ROOT)
         include("classes.jar")
-        rename("classes.jar", "Zip.jar")
+        rename("classes.jar", JAR)
     }
 }
 
