--- a/Plugins/AWS/plugin.xml
+++ b/Plugins/AWS/plugin.xml
@@ -19,7 +19,7 @@
 	<platform name="android">
     	<config-file target="config.xml" parent="/*">
 			<feature name="AWS">
-				<param name="android-package" value="com.shortsands.aws.s3Plugin.AWS"/>
+				<param name="android-package" value="plugin.AWS"/>
 			</feature>
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest">
@@ -29,29 +29,17 @@
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			 <service android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" android:enabled="true" />
 		</config-file>
-		<source-file src="src/android/com/shortsands/io/FileManager.java" target-dir="src/com/shortsands/io" />
-		<source-file src="src/android/com/shortsands/io/Zip.java" target-dir="src/com/shortsands/io" />
-		<source-file src="src/android/com/shortsands/aws/s3/AwsS3.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/AwsS3AbstractListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/Credentials.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/DownloadDataListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/DownloadFileListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/DownloadTextListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/DownloadZipFileListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/UploadDataListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3/UploadFileListener.java" target-dir="src/com/shortsands/aws/s3" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/AWS.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginDataListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginFileListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginTextListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/DownloadPluginZipFileListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/UploadPluginDataListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/com/shortsands/aws/s3Plugin/UploadPluginFileListener.java" target-dir="src/com/shortsands/aws/s3Plugin" />
-		<source-file src="src/android/libs/aws-android-sdk-core-2.4.2.jar" target-dir="libs" />
-		<source-file src="src/android/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="libs" />
-		<!-- change library to a more limited one when done. -->
-		<!-- <framework src="src/android/plugin.gradle" custom="true" type="gradleReference"/> -->
-		<!-- Need something to copy build-extras.gradle to proper location. -->
+		<source-file src="src/android/plugin/AWS.java" target-dir="src/plugin" />
+		<source-file src="src/android/plugin/DownloadPluginDataListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/plugin/DownloadPluginFileListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/plugin/DownloadPluginTextListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/plugin/DownloadPluginZipFileListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/plugin/UploadPluginDataListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/plugin/UploadPluginFileListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/app/libs/AWS.jar" target-dir="src/libs" />
+		<source-file src="src/android/app/libs/Zip.jar" target-dir="src/libs" />
+		<source-file src="src/android/app/libs/aws-android-sdk-core-2.4.2.jar" target-dir="src/libs" />
+		<source-file src="src/android/app/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="src/libs" />
 	</platform>
   
 	<platform name="ios">
