--- a/Plugins/AWS/plugin.xml
+++ b/Plugins/AWS/plugin.xml
@@ -36,7 +36,7 @@
 		<source-file src="src/android/plugin/DownloadPluginZipFileListener.java" target-dir="src/plugin" />
 		<source-file src="src/android/plugin/UploadPluginDataListener.java" target-dir="src/plugin" />
 		<source-file src="src/android/plugin/UploadPluginFileListener.java" target-dir="src/plugin" />
-		<source-file src="src/android/app/libs/AWS.jar" target-dir="src/libs" />
+		<source-file src="src/android/plugin/AWS.jar" target-dir="src/libs" />
 		<source-file src="src/android/app/libs/Zip.jar" target-dir="src/libs" />
 		<source-file src="src/android/app/libs/aws-android-sdk-core-2.4.2.jar" target-dir="src/libs" />
 		<source-file src="src/android/app/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="src/libs" />
