--- a/Plugins/VideoPlayer/plugin.xml
+++ b/Plugins/VideoPlayer/plugin.xml
@@ -22,12 +22,18 @@
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest">
 			<uses-permission android:name="android.permission.INTERNET" />
+			<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			<activity android:name="com.shortsands.videoplayer.VideoActivity" android:label="VideoActivity" android:screenOrientation="landscape"></activity>
+			<service android:enabled="true" android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" />
 		</config-file>
 		<source-file src="src/android/plugin/VideoPlayer.java" target-dir="src/plugin" />
 		<lib-file src="src/android/plugin/VideoPlayer.jar" target-dir="src/libs" />
+		<lib-file src="src/android/app/libs/AWS.jar" target-dir="src/libs" />
+		<lib-file src="src/android/app/libs/Zip.jar" target-dir="src/libs" />
+		<lib-file src="src/android/app/libs/aws-android-sdk-core-2.4.2.jar" target-dir="src/libs" />
+		<lib-file src="src/android/app/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="src/libs" />		
 		<framework src="src/android/plugin/plugin.gradle" custom="true" type="gradleReference"/>
 	</platform>
   
