--- a/Plugins/VideoPlayer/src/android/app/build.gradle
+++ b/Plugins/VideoPlayer/src/android/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude "bundle.properties"
+        exclude "META-INF/javamail.providers"
+    }
 }
 
 dependencies {
@@ -27,4 +31,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
+    compile files('libs/aws-android-sdk-s3-2.4.2.jar')
+    compile files('libs/aws-android-sdk-core-2.4.2.jar')
+    compile files('libs/Zip.jar')
+    compile files('libs/AWS.jar')
 }
