--- a/Plugins/VideoPlayer/plugin.xml
+++ b/Plugins/VideoPlayer/plugin.xml
@@ -13,6 +13,9 @@
 	<js-module name="VideoPlayer" src="www/VideoPlayer.js">
     	<clobbers target="VideoPlayer" />
 	</js-module>
+	
+	<dependency id="com-shortsands-pkzip" url="file:////Users/garygriswold/ShortSands/BibleApp/Plugins/PKZip" />
+	<dependency id="com-shortsands-aws" url="file:////Users/garygriswold/ShortSands/BibleApp/Plugins/AWS" />
 
 	<platform name="android">
     	<config-file target="config.xml" parent="/*">
@@ -30,10 +33,10 @@
 		</config-file>
 		<source-file src="src/android/plugin/VideoPlayer.java" target-dir="src/plugin" />
 		<lib-file src="src/android/plugin/VideoPlayer.jar" target-dir="src/libs" />
-		<lib-file src="src/android/app/libs/AWS.jar" target-dir="src/libs" />
+		<!-- <lib-file src="src/android/app/libs/AWS.jar" target-dir="src/libs" />
 		<lib-file src="src/android/app/libs/Zip.jar" target-dir="src/libs" />
 		<lib-file src="src/android/app/libs/aws-android-sdk-core-2.4.2.jar" target-dir="src/libs" />
-		<lib-file src="src/android/app/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="src/libs" />		
+		<lib-file src="src/android/app/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="src/libs" /> -->
 		<framework src="src/android/plugin/plugin.gradle" custom="true" type="gradleReference"/>
 	</platform>
   
@@ -45,9 +48,9 @@
 		</config-file>
 		<source-file src="src/ios/VideoPlayer.swift" />
 		<framework src="src/ios/build/VideoPlayer.framework" custom="true" embed="true" />
-		<framework src="src/ios/VideoPlayer/AWS.framework" custom="true" embed="true" />
+		<!-- <framework src="src/ios/VideoPlayer/AWS.framework" custom="true" embed="true" />
 		<framework src="src/ios/VideoPlayer/AWSCore.framework" custom="true" embed="true" />
-		<framework src="src/ios/VideoPlayer/Zip.framework" custom="true" embed="true" />
+		<framework src="src/ios/VideoPlayer/Zip.framework" custom="true" embed="true" /> -->
 		<framework src="MediaPlayer.framework" />
 	</platform>
 
