--- a/Plugins/AudioPlayer/src/android_AudioPlayer/app/build.gradle
+++ b/Plugins/AudioPlayer/src/android_AudioPlayer/app/build.gradle
@@ -28,4 +28,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
+
+    compile files('libs/aws-android-sdk-core-2.4.2.jar')
+    compile files('libs/aws-android-sdk-s3-2.4.2.jar')
+    compile files('libs/Zip.jar')
+    compile files('libs/AWS.jar')
 }
