audio player AWSCache coded and somewhat tested.

--- a/Plugins/AudioPlayer/src/android_AudioPlayer/app/src/main/AndroidManifest.xml
+++ b/Plugins/AudioPlayer/src/android_AudioPlayer/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shortsands.audioplayer">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
@@ -19,5 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:enabled="true" android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" />
     </application>
 </manifest>
