--- a/Plugins/AudioPlayer/src/android_AudioPlayer/app/src/main/AndroidManifest.xml
+++ b/Plugins/AudioPlayer/src/android_AudioPlayer/app/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
             </intent-filter>
         </activity>
         <service android:enabled="true" android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" />
+        <!--<service android:enabled="true" android:name="com.shortsands.audioplayer.AudioBible" />-->
     </application>
 </manifest>
