--- a/YourBible/package.json
+++ b/YourBible/package.json
@@ -10,6 +10,9 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "dependencies": {
+    "com-shortsands-aws": "/Users/garygriswold/ShortSands/BibleApp/Plugins/AWS",
+    "com-shortsands-pkzip": "/Users/garygriswold/ShortSands/BibleApp/Plugins/PKZip",
+    "com-shortsands-videoplayer": "/Users/garygriswold/ShortSands/BibleApp/Plugins/VideoPlayer",
     "cordova-android": "^6.3.0",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-device": "^2.0.1",
@@ -19,15 +22,11 @@
     "cordova-plugin-inappbrowser": "^2.0.1",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.1",
-    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.1.4",
     "cordova-plugin-zip": "^3.1.0",
     "cordova-sqlite-ext": "^2.0.0",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "com-shortsands-pkzip": "/Users/garygriswold/ShortSands/BibleApp/Plugins/PKZip",
-    "com-shortsands-aws": "/Users/garygriswold/ShortSands/BibleApp/Plugins/AWS",
-    "com-shortsands-videoplayer": "/Users/garygriswold/ShortSands/BibleApp/Plugins/VideoPlayer"
+    "ionic-plugin-keyboard": "^2.2.1"
   },
   "cordova": {
     "plugins": {
@@ -39,7 +38,6 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-wkwebview-engine": {},
       "cordova-plugin-zip": {},
